[gd_scene load_steps=67 format=2]

[ext_resource path="res://GUI/MainMenuControl.gd" type="Script" id=1]
[ext_resource path="res://GUI/MainMenuExpandMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/character.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.509804 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.862745 )

[sub_resource type="Theme" id=4]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 3 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="Theme" id=15]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = SubResource( 5 )
HScrollBar/styles/grabber_highlight = SubResource( 6 )
HScrollBar/styles/grabber_pressed = SubResource( 7 )
HScrollBar/styles/scroll = SubResource( 8 )
HScrollBar/styles/scroll_focus = SubResource( 9 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 10 )
VScrollBar/styles/grabber_highlight = SubResource( 11 )
VScrollBar/styles/grabber_pressed = SubResource( 12 )
VScrollBar/styles/scroll = SubResource( 13 )
VScrollBar/styles/scroll_focus = SubResource( 14 )

[sub_resource type="StyleBoxFlat" id=39]
bg_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 1, 1, 1, 0.509804 )

[sub_resource type="StyleBoxFlat" id=41]
bg_color = Color( 1, 1, 1, 0.862745 )

[sub_resource type="Theme" id=42]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 39 )
Button/styles/normal = SubResource( 40 )
Button/styles/pressed = SubResource( 41 )

[sub_resource type="Theme" id=43]

[sub_resource type="StyleBoxFlat" id=56]
bg_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxFlat" id=57]
bg_color = Color( 1, 1, 1, 0.862745 )

[sub_resource type="StyleBoxFlat" id=46]
bg_color = Color( 1, 1, 1, 0.509804 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 1, 1, 0.509804 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 0.862745 )

[sub_resource type="Theme" id=19]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 16 )
Button/styles/normal = SubResource( 17 )
Button/styles/pressed = SubResource( 18 )

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxEmpty" id=29]

[sub_resource type="Theme" id=30]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = SubResource( 20 )
HScrollBar/styles/grabber_highlight = SubResource( 21 )
HScrollBar/styles/grabber_pressed = SubResource( 22 )
HScrollBar/styles/scroll = SubResource( 23 )
HScrollBar/styles/scroll_focus = SubResource( 24 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 25 )
VScrollBar/styles/grabber_highlight = SubResource( 26 )
VScrollBar/styles/grabber_pressed = SubResource( 27 )
VScrollBar/styles/scroll = SubResource( 28 )
VScrollBar/styles/scroll_focus = SubResource( 29 )

[sub_resource type="StyleBoxFlat" id=55]
bg_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxFlat" id=54]
bg_color = Color( 1, 1, 1, 0.862745 )

[sub_resource type="StyleBoxFlat" id=49]
bg_color = Color( 1, 1, 1, 0.509804 )

[sub_resource type="StyleBoxFlat" id=50]
bg_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxFlat" id=51]
bg_color = Color( 1, 1, 1, 0.509804 )

[sub_resource type="StyleBoxFlat" id=52]
bg_color = Color( 1, 1, 1, 0.862745 )

[sub_resource type="Theme" id=53]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 50 )
Button/styles/normal = SubResource( 51 )
Button/styles/pressed = SubResource( 52 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 1, 1, 1, 0.509804 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 1, 1, 1, 0.862745 )

[sub_resource type="Theme" id=34]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 31 )
Button/styles/normal = SubResource( 32 )
Button/styles/pressed = SubResource( 33 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 1, 1, 1, 0.509804 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 1, 1, 1, 0.862745 )

[sub_resource type="Theme" id=38]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 35 )
Button/styles/normal = SubResource( 36 )
Button/styles/pressed = SubResource( 37 )

[sub_resource type="StyleBoxFlat" id=58]
bg_color = Color( 1, 1, 1, 0.54902 )

[sub_resource type="Theme" id=59]
Panel/styles/panel = SubResource( 58 )

[sub_resource type="StyleBoxFlat" id=60]
bg_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxFlat" id=61]
bg_color = Color( 1, 1, 1, 0.509804 )

[sub_resource type="StyleBoxFlat" id=62]
bg_color = Color( 1, 1, 1, 0.862745 )

[sub_resource type="Theme" id=63]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 60 )
Button/styles/normal = SubResource( 61 )
Button/styles/pressed = SubResource( 62 )

[sub_resource type="StyleBoxFlat" id=64]
bg_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxFlat" id=65]
bg_color = Color( 1, 1, 1, 0.509804 )

[sub_resource type="StyleBoxFlat" id=66]
bg_color = Color( 1, 1, 1, 0.862745 )

[sub_resource type="Theme" id=67]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 64 )
Button/styles/normal = SubResource( 65 )
Button/styles/pressed = SubResource( 66 )

[node name="MainMenu" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.0862745, 0.529412, 0.611765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Control"]
margin_left = 44.0
margin_top = 104.0
margin_right = 384.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 40 )
theme = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayScrollContainer" type="ScrollContainer" parent="Control"]
margin_right = 340.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
size_flags_horizontal = 8
size_flags_vertical = 8
theme = SubResource( 15 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PlayScrollContainer"]
margin_right = 344.0
margin_bottom = 72.0

[node name="MarginContainer" type="MarginContainer" parent="Control/PlayScrollContainer/HBoxContainer"]
margin_right = 46.0
margin_bottom = 72.0
rect_min_size = Vector2( 46, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PlayScrollContainer/HBoxContainer"]
margin_left = 50.0
margin_right = 290.0
margin_bottom = 72.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 240, 72 )
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2

[node name="ServerBrowserButton" type="Button" parent="Control/PlayScrollContainer/HBoxContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 30.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 9
size_flags_vertical = 9
theme = SubResource( 42 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Server Browser"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control/PlayScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 240.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 4 )

[node name="QuickPlayButton" type="Button" parent="Control/PlayScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 240.0
margin_bottom = 72.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 9
size_flags_vertical = 9
theme = SubResource( 43 )
custom_styles/hover = SubResource( 56 )
custom_styles/pressed = SubResource( 57 )
custom_styles/normal = SubResource( 46 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Quick Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Control/PlayScrollContainer/HBoxContainer"]
margin_left = 294.0
margin_right = 344.0
margin_bottom = 72.0
rect_min_size = Vector2( 50, 0 )

[node name="CustomizeButton" type="Button" parent="Control"]
margin_left = 44.0
margin_top = 164.0
margin_right = 384.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 40 )
theme = SubResource( 19 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Customize"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomizeScrollContainer" type="ScrollContainer" parent="Control"]
margin_left = 44.0
margin_top = 110.0
margin_right = 384.0
margin_bottom = 110.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 340, 0 )
theme = SubResource( 30 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CustomizeScrollContainer"]
margin_right = 344.0
margin_bottom = 74.0

[node name="MarginContainer" type="MarginContainer" parent="Control/CustomizeScrollContainer/HBoxContainer"]
margin_right = 46.0
margin_bottom = 74.0
rect_min_size = Vector2( 46, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CustomizeScrollContainer/HBoxContainer"]
margin_left = 50.0
margin_right = 290.0
margin_bottom = 74.0
rect_min_size = Vector2( 240, 72 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AppearanceButton" type="Button" parent="Control/CustomizeScrollContainer/HBoxContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_styles/hover = SubResource( 55 )
custom_styles/pressed = SubResource( 54 )
custom_styles/normal = SubResource( 49 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Appearance"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control/CustomizeScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 240.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 6 )

[node name="AbilitiesButton" type="Button" parent="Control/CustomizeScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 240.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 30 )
theme = SubResource( 53 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Abilities"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Control/CustomizeScrollContainer/HBoxContainer"]
margin_left = 294.0
margin_right = 344.0
margin_bottom = 74.0
rect_min_size = Vector2( 50, 0 )

[node name="OptionsButton" type="Button" parent="Control"]
margin_left = 44.0
margin_top = 224.0
margin_right = 384.0
margin_bottom = 264.0
rect_min_size = Vector2( 0, 40 )
theme = SubResource( 34 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Control"]
margin_left = 44.0
margin_top = 284.0
margin_right = 384.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 40 )
theme = SubResource( 38 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="Sprite" parent="Control"]
position = Vector2( 600, 350 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="ExitMenu" type="Panel" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 59 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ExitMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -60.0
margin_right = 150.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 120 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/ExitMenu/VBoxContainer"]
margin_right = 318.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="Control/ExitMenu/VBoxContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.5
margin_top = -7.0
margin_right = 121.5
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "If you leave I swear I'll take more tren"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control/ExitMenu/VBoxContainer"]
margin_top = 54.0
margin_right = 318.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ExitMenu/VBoxContainer"]
margin_top = 68.0
margin_right = 318.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 50 )

[node name="ExitConfirm" type="Button" parent="Control/ExitMenu/VBoxContainer/HBoxContainer"]
margin_right = 146.0
margin_bottom = 50.0
rect_min_size = Vector2( 146, 0 )
theme = SubResource( 63 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "JUICED"

[node name="MarginContainer" type="MarginContainer" parent="Control/ExitMenu/VBoxContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 168.0
margin_bottom = 50.0
rect_min_size = Vector2( 18, 0 )

[node name="ExitCancel" type="Button" parent="Control/ExitMenu/VBoxContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 318.0
margin_bottom = 50.0
rect_min_size = Vector2( 146, 0 )
theme = SubResource( 67 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "NATTY"
[connection signal="pressed" from="Control/PlayScrollContainer/HBoxContainer/VBoxContainer/QuickPlayButton" to="Control" method="_on_QuickPlayButton_pressed"]
[connection signal="pressed" from="Control/ExitButton" to="Control" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Control/ExitMenu/VBoxContainer/HBoxContainer/ExitConfirm" to="Control" method="_on_ExitConfirm_pressed"]
[connection signal="pressed" from="Control/ExitMenu/VBoxContainer/HBoxContainer/ExitCancel" to="Control" method="_on_ExitCancel_pressed"]
